--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         };
 
         // ------------------ Gemini API Integration ------------------
-        const apiKey = ""; // Canvas will provide the key runtime.
+        const apiKey = "AIzaSyDh_GfqU5Dbuc6Hu6n9Tj1AMBxNPZG__rQ"; // Canvas will provide the key runtime.
 
         async function callGeminiAPI(prompt, buttonToDisable = null) {
             let originalButtonContent;
