--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
                     <button onclick="showView('home-view')" class="text-secondary hover:accent-text"><i class="fas fa-times text-2xl"></i></button>
                 </header>
                 <div class="bg-secondary p-4 rounded-xl flex items-center gap-2 mb-4 shadow-custom">
+                    <i class="fas fa-earth-americas text-primary"></i>
                     <input type="text" id="task-input" class="w-full bg-transparent text-primary placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-[var(--accent-color)] rounded-md p-2" placeholder="Adicionar nova tarefa...">
                     <button id="split-task-btn" class="p-2 rounded-full hover:bg-tertiary transition-colors disabled:opacity-50 disabled:cursor-not-allowed" title="Dividir tarefa com IA">
                         <i class="fas fa-wand-magic-sparkles accent-text"></i>
@@ -242,6 +243,7 @@
                     </button>
                 </div>
                 <div class="bg-secondary p-4 rounded-xl flex items-center gap-2 mb-4 shadow-custom">
+                    <i class="fas fa-earth-americas text-primary"></i>
                     <input type="text" id="item-input" class="w-full bg-transparent text-primary placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-[var(--accent-color)] rounded-md p-2" placeholder="Adicionar item...">
                     <button id="add-item-button" class="accent-bg text-white font-bold w-10 h-10 rounded-full flex items-center justify-center transition-transform hover:scale-110">
                         <i class="fas fa-plus"></i>
@@ -257,6 +259,7 @@
                     <button onclick="showView('home-view')" class="text-secondary hover:accent-text"><i class="fas fa-times text-2xl"></i></button>
                 </header>
                 <div class="bg-secondary p-4 rounded-xl flex items-center gap-2 mb-4 shadow-custom">
+                    <i class="fas fa-earth-americas text-primary"></i>
                     <input type="text" id="note-input" class="w-full bg-transparent text-primary placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-[var(--accent-color)] rounded-md p-2" placeholder="Escreva uma nota...">
                     <button id="add-note-button" class="accent-bg text-white font-bold w-10 h-10 rounded-full flex items-center justify-center transition-transform hover:scale-110">
                         <i class="fas fa-plus"></i>
@@ -433,8 +436,10 @@
             };
 
             // ------------------ Gemini API Integration ------------------
-            // A API key é fornecida pelo ambiente de execução, não precisa ser incluída no código.
-            const geminiApiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent`;
+            // IMPORTANTE: Por favor, insira a sua chave da API abaixo para que a IA funcione em qualquer lugar.
+            // Para sua segurança, não compartilhe esta chave em repositórios públicos como o GitHub.
+            const apiKey = "AIzaSyBoShXpBH7EhKa8VWECaIvDrKi1vtYLpTM"; 
+            const geminiApiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
             
             async function callGemini(prompt, buttonToDisable = null, loadingText = "") {
                 const originalContent = buttonToDisable ? buttonToDisable.innerHTML : null;
